========================================
Change log for block_taskchain_navigation
========================================

2022-02-02 (24)
 - modify Bootstrap classes so that item select boxes are also shown on small screens

2022-01-24 (23)
 - add new setting to offer link directly to edit page, regardless of course page edit more

2022-01-18 (22)
 - add new setting to allow section number of to prepended to names of single-section categories

2021-09-21 (21)
 - fix code that add checkboxes to allow settings to be copied to similar blocks in other courses

2021-09-14 (20)
 - modify markdown syntax for long help messages (for compatability with Moodle 3.11)

2021-06-18 (29)
 - remove use of the splat-operator, because it causes a syntax error in PHP 5.4

2020-12-14 (27)
 - increase date range to 2050, and allow more granular definition of minutes

2020-10-30 (26)
 - handle faulty grade items grade category does not exist

2020-07-17 (25)
 - fix performance of get_numsections() on Moodle 2.4 - 3.3

2020-07-05 (24)
 - adjust CSS for Boost theme

2020-07-01 (23)
 - add duedate (used by assign) to list of modifiable dates

2020-06-30 (22)
 - add settings for individual grades in the grade book

2020-05-12 (21)
 - small fix to SQL for compatability with PostgreSQL

2019-11-10 (20)
 - standardize layout and spelling in CHANGES.txt

2019-07-31 (17)
 - fix display and setting of hidden sections via taskchain_navigation block

2019-07-30 (16)
 - Fix errors about incomplete object, caused by class not existing before unserialize

2019-06-10 (15)
 - fix 'continue' statement within 'switch' block

2019-05-30 (14)
 - remove 'continue' statement inside SWITCH block

2019-05-25 (13)
 - be aware availability settings when deciding whether or not to display a link to a section
 - remove tags from 'title' attribute of section links

2018-03-16 (11)
 - do not remove Javascript from Section 0 that is not connected to this block

2018-02-27 (10)